--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Influence Hub - The premier marketplace for SaaS and Tech content creation." />
-    <meta name="keywords" content="SaaS, Influencer Marketing, Tech Content, B2B Marketing" />
+    <meta name="description" content="Influence Hub - Bridging small-scale startups with micro-influencers for authentic collaborations." />
+    <meta name="keywords" content="Micro-Influencers, Startups, Influencer Marketing, Small Business, Affordable Marketing" />
     <meta name="author" content="Influence Hub" />
-    <meta property="og:title" content="Influence Hub - SaaS Creator Marketplace" />
-    <meta property="og:description" content="Connect with top tech influencers to scale your SaaS growth." />
+    <meta property="og:title" content="Influence Hub - Connect Startups with Micro-Influencers" />
+    <meta property="og:description" content="This platform acts as a bridge between small-scale startups and micro-influencers." />
     <meta property="og:type" content="website" />
-    <title>Influence Hub | SaaS Creator Marketplace</title>
+    <meta property="og:image" content="/logo.svg" />
+    <title>Influence Hub | Connect Startups with Micro-Influencers</title>
   </head>
   <body>
     <div id="root"></div>
